--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <title>LimeOne</title>
-    <link rel="icon" type="image/svg+xml" href="/tasker.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/app-logo.svg" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
