Routes Management and UserModule Updates - Save implementation - View User Details implementation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
 
-    <title>LimeOne</title>
+    <title>TaskHero</title>
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/app-logo.svg" />
 
     <!-- Fonts -->
